--- a/ProyectoMotoresGIII/Config/DefaultEngine.ini
+++ b/ProyectoMotoresGIII/Config/DefaultEngine.ini
@@ -3,14 +3,18 @@ GameName=ProyectoMotoresGIII
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Game/Blueprint/Instance/BP_GameInstance.BP_GameInstance_C
+GameDefaultMap=/Game/ThirdPerson/Maps/forestMainMenu.forestMainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Game/Blueprint/Instance/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
