Limpieza de proyecto

--- a/ProyectoMotoresGIII/Config/DefaultGame.ini
+++ b/ProyectoMotoresGIII/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9E9D942F407061ED5DF6489D549D0983
-ProjectName=Third Person BP Game Template
+ProjectName=Kamenbushido: The way of the masked warrior
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +8,8 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+FullRebuild=True
+
