--- a/ProyectoMotoresGIII/Config/DefaultEngine.ini
+++ b/ProyectoMotoresGIII/Config/DefaultEngine.ini
@@ -32,6 +32,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=True
 r.MSAACount=2
 r.AntiAliasingMethod=4
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
